--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,7 @@ concurrency:
 env:
   restore-key-prefixes: |
     publish_rust_github
+    publish_generic
     publish_npm
     build_rust
     build_typescript
@@ -46,6 +47,8 @@ jobs:
       jobs_publish_npm_count: ${{ steps.plan.outputs.jobs_publish_npm_count }}
       jobs_publish_rust_github: ${{ steps.plan.outputs.jobs_publish_rust_github }}
       jobs_publish_rust_github_count: ${{ steps.plan.outputs.jobs_publish_rust_github_count }}
+      jobs_publish_generic: ${{ steps.plan.outputs.jobs_publish_generic }}
+      jobs_publish_generic_count: ${{ steps.plan.outputs.jobs_publish_generic_count }}
       jobs_cache_restore_key_prefixes: ${{ steps.plan.outputs.jobs_cache_restore_key_prefixes }}
     steps:
       - name: Checkout repository
@@ -106,6 +109,7 @@ jobs:
 
             setJobOutput('jobs_publish_npm', jobs.publish?.npm || []);
             setJobOutput('jobs_publish_rust_github', jobs.publish?.rust_github || []);
+            setJobOutput('jobs_publish_generic', jobs.publish?.generic || []);
 
             // 5. Handle the environment variable prefix
             core.setOutput('jobs_cache_restore_key_prefixes', process.env['restore-key-prefixes']);
@@ -159,3 +163,27 @@ jobs:
       cache-restore-key-prefixes: ${{ needs.plan.outputs.jobs_cache_restore_key_prefixes }}
       save-outputs: true
       artifacts-name: build-typescript
+
+  publish-generic:
+    needs:
+      - build-rust
+      - build-typescript
+      - plan
+    if: ${{ needs.plan.outputs.jobs_publish_generic_count > 0 }}
+    uses: ./.github/workflows/run-omni-jobs.yaml
+    with:
+      jobs: ${{ needs.plan.outputs.jobs_publish_generic }}
+      cache-key-prefix: publish_generic
+      cache-restore-key-prefixes: ${{ needs.plan.outputs.jobs_cache_restore_key_prefixes }}
+
+  publish-npm:
+    needs:
+      - build-rust
+      - build-typescript
+      - plan
+    if: ${{ needs.plan.outputs.jobs_publish_generic_count > 0 }}
+    uses: ./.github/workflows/run-omni-jobs.yaml
+    with:
+      jobs: ${{ needs.plan.outputs.jobs_publish_npm }}
+      cache-key-prefix: publish_npm
+      cache-restore-key-prefixes: ${{ needs.plan.outputs.jobs_cache_restore_key_prefixes }}
