--- a/services/omni_remote_cache_service/project.omni.yaml
+++ b/services/omni_remote_cache_service/project.omni.yaml
@@ -11,6 +11,9 @@ tasks:
       vars:
         ADDITIONAL_ARGS: >
           -- serve -b in-memory --routes.enable-openapi
+  build:
+    meta:
+      is_publish_task: true
 
   prod:
     command: >
