--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -175,7 +175,7 @@ jobs:
       - build-rust
       - build-typescript
       - plan
-    if: ${{ needs.plan.outputs.jobs_publish_generic_count > 0 }}
+    if: ${{ needs.plan.outputs.jobs_publish_generic_count > 0 && startsWith(github.ref, 'refs/tags/') }}
     uses: ./.github/workflows/run-omni-jobs.yaml
     with:
       jobs: ${{ needs.plan.outputs.jobs_publish_generic }}
@@ -187,7 +187,7 @@ jobs:
       - build-rust
       - build-typescript
       - plan
-    if: ${{ needs.plan.outputs.jobs_publish_generic_count > 0 }}
+    if: ${{ needs.plan.outputs.jobs_publish_generic_count > 0 && startsWith(github.ref, 'refs/tags/') }}
     uses: ./.github/workflows/run-omni-jobs.yaml
     with:
       jobs: ${{ needs.plan.outputs.jobs_publish_npm }}
