--- a/.github/actions/setup-omni/action.yaml
+++ b/.github/actions/setup-omni/action.yaml
@@ -44,12 +44,14 @@ runs:
         # Define a literal newline
         NL=$'\n'
 
-        res="${{ runner.os }}-omni-${{ inputs.cache-key-prefix }}-"
+        res="${{ runner.os }}-omni-${{ inputs.cache-key-prefix }}"
 
         for prefix in $RAW_RESTORE_KEY_LIST; do
           # Use the variable for clean concatenation
           res="${res}${NL}${{ runner.os }}-omni-$prefix-"
         done
+
+        res="${res}${NL}${{ runner.os }}-omni-"
 
         echo "restore_key_list<<EOF" >> "$GITHUB_OUTPUT"
         echo "$res" >> "$GITHUB_OUTPUT"
