--- a/omni/presets/rust-multiplatform.omni.yaml
+++ b/omni/presets/rust-multiplatform.omni.yaml
@@ -119,7 +119,7 @@ tasks:
     cache:
       key:
         env:
-          append: [RUST_TEST_ADDITIONAL_ARGS]
+          append: [RUST_TEST_ADDITIONAL_ARGSu]
         files:
           append: ["./tests/**/*.rs"]
 
@@ -140,10 +140,6 @@ tasks:
     command: cargo build --release --target aarch64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:aarch64-unknown-linux-gnu
-    output:
-      files:
-        - "@workspace/target/aarch64-unknown-linux-gnu/release/{{ env.PROJECT_NAME }}"
-        - "@workspace/target/release/{{ env.PROJECT_NAME }}"
     cache:
       key:
         env:
@@ -154,10 +150,6 @@ tasks:
     command: cargo build --release --target x86_64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:x86_64-unknown-linux-gnu
-    output:
-      files:
-        - "@workspace/target/x86_64-unknown-linux-gnu/release/{{ env.PROJECT_NAME }}"
-        - "@workspace/target/release/{{ env.PROJECT_NAME }}"
     cache:
       key:
         env:
@@ -168,10 +160,6 @@ tasks:
     command: cargo build --release --target x86_64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:x86_64-apple-darwin
-    output:
-      files:
-        - "@workspace/target/x86_64-apple-darwin/release/{{ env.PROJECT_NAME }}"
-        - "@workspace/target/release/{{ env.PROJECT_NAME }}"
     cache:
       key:
         env:
@@ -182,10 +170,6 @@ tasks:
     command: cargo build --release --target aarch64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:aarch64-apple-darwin
-    output:
-      files:
-        - "@workspace/target/aarch64-apple-darwin/release/{{ env.PROJECT_NAME }}"
-        - "@workspace/target/release/{{ env.PROJECT_NAME }}"
     cache:
       key:
         env:
@@ -196,10 +180,6 @@ tasks:
     command: cargo build --release --target x86_64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:x86_64-pc-windows-msvc
-    output:
-      files:
-        - "@workspace/target/x86_64-pc-windows-msvc/release/{{ env.PROJECT_NAME }}.exe"
-        - "@workspace/target/release/{{ env.PROJECT_NAME }}.exe"
     cache:
       key:
         env:
@@ -210,10 +190,6 @@ tasks:
     command: cargo build --release --target aarch64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:aarch64-pc-windows-msvc
-    output:
-      files:
-        - "@workspace/target/aarch64-pc-windows-msvc/release/{{ env.PROJECT_NAME }}.exe"
-        - "@workspace/target/release/{{ env.PROJECT_NAME }}.exe"
     cache:
       key:
         env:
@@ -224,10 +200,6 @@ tasks:
     command: cargo build --release -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:current
-    output:
-      files:
-        - "@workspace/target/release/{{ env.PROJECT_NAME }}"
-        - "@workspace/target/release/{{ env.PROJECT_NAME }}.exe"
     cache:
       key:
         env:
@@ -239,8 +211,7 @@ tasks:
       files:
         - "@workspace/target/release/{{ env.PROJECT_NAME }}"
         - "@workspace/target/release/{{ env.PROJECT_NAME }}.exe"
-        - "@workspace/target/{% if env.RUST_TARGET %}{{ env.RUST_TARGET }}/{% endif %}release/{{ env.PROJECT_NAME }}"
-        - "@workspace/target/{% if env.RUST_TARGET %}{{ env.RUST_TARGET }}/{% endif %}release/{{ env.PROJECT_NAME }}.exe"
+        - "@workspace/target/*/release/{{ env.PROJECT_NAME }}.exe"
     dependencies:
       - test
       - ^build
@@ -263,4 +234,6 @@ meta:
     aarch64-apple-darwin:
       runner: macos-latest
     x86_64-pc-windows-msvc:
+      runner: windows-latest
+    aarch64-pc-windows-msvc:
       runner: windows-latest
