fix(omni_task_executor): update verbose info trace to trace level

--- a/omni/presets/rust-multiplatform.omni.yaml
+++ b/omni/presets/rust-multiplatform.omni.yaml
@@ -211,7 +211,8 @@ tasks:
       files:
         - "@workspace/target/release/{{ env.PROJECT_NAME }}"
         - "@workspace/target/release/{{ env.PROJECT_NAME }}.exe"
-        - "@workspace/target/*/release/{{ env.PROJECT_NAME }}.exe"
+        - "@workspace/target/**/release/{{ env.PROJECT_NAME }}"
+        - "@workspace/target/**/release/{{ env.PROJECT_NAME }}.exe"
     dependencies:
       - test
       - ^build
