ci: set inherit env vars

--- a/.github/actions/determine-build-tools/action.yaml
+++ b/.github/actions/determine-build-tools/action.yaml
@@ -34,7 +34,7 @@ runs:
 
     - name: Get Dry Run Result
       shell: ${{ inputs.shell }}
-      run: omni run -dL --result result.json ${{ inputs.omni-run }}
+      run: omni -i run -dL --result result.json ${{ inputs.omni-run }}
 
     - name: Summarize Dry Run Result
       shell: ${{ inputs.shell }}
