chore(omni_remote_cache_client): add timeout in tests

--- a/crates/omni_remote_cache_client/Cargo.toml
+++ b/crates/omni_remote_cache_client/Cargo.toml
@@ -24,3 +24,7 @@ tokio = { workspace = true }
 http = { workspace = true }
 http-body = { workspace = true }
 reqwest = { workspace = true }
+
+[dev-dependencies]
+ntest = { workspace = true }
+test-log = { workspace = true }
