--- a/.github/workflows/run-omni-jobs.yaml
+++ b/.github/workflows/run-omni-jobs.yaml
@@ -126,9 +126,9 @@ jobs:
                                     case "aarch64-unknown-linux-gnu":
                                         matrixMap[key].env[varName] = `x86_64-unknown-linux-gnu;${targetName}`;
                                         break;
-                                    case "x86_64-macos-darwin":
-                                        matrixMap[key].env[varName] = `aarch64-apple-darwin;${targetName}`;
-                                        break;
+                                    // case "x86_64-macos-darwin":
+                                    //     matrixMap[key].env[varName] = `aarch64-apple-darwin;${targetName}`;
+                                    //     break;
                                     case "aarch64-pc-windows-msvc":
                                         matrixMap[key].env[varName] = `x86_64-pc-windows-msvc;${targetName}`;
                                         break;
