fix(omni_remote_cache_service): openapi server url

--- a/services/omni_remote_cache_service/Cargo.toml
+++ b/services/omni_remote_cache_service/Cargo.toml
@@ -44,6 +44,7 @@ maps = { workspace = true }
 sets = { workspace = true }
 time = { workspace = true }
 axum-test = { workspace = true }
+sqlx = { workspace = true }
 
 [dev-dependencies]
 axum-test = { workspace = true }
