--- a/Cargo.toml
+++ b/Cargo.toml
@@ -228,6 +228,15 @@ serde_validate = { path = "./crates/serde_validate" }
 serde_repr = { version = "^0.1.20" }
 heck = { version = "^0.5.0" }
 bridge_rpc = { path = "./crates/bridge_rpc" }
+sqlx = { version = "^0.8.6", features = [
+    "runtime-tokio-rustls",
+    "all-databases",
+    "uuid",
+    "time",
+    "bigdecimal",
+    "bstr",
+    "ipnet"
+] }
 # nom = { version = "^8.0.0" }
 
 [profile.release]
