feat: support generator sessions

--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -101,6 +101,7 @@ omni_scm = { workspace = true }
 omni_execution_plan = { workspace = true }
 omni_prompt = { workspace = true }
 value-bag = { workspace = true }
+either = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
