--- a/crates/omni_tera/Cargo.toml
+++ b/crates/omni_tera/Cargo.toml
@@ -23,3 +23,4 @@ derive_builder = { workspace = true }
 derive-new = { workspace = true }
 tera = { workspace = true }
 heck = { workspace = true }
+pathdiff = { workspace = true }
