--- a/generators/ts-package/generator.omni.yaml
+++ b/generators/ts-package/generator.omni.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../.artifacts/generator.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
 name: ts-package
 display_name: TypeScript Package
 description: A TypeScript package generator
